include(FetchContent)

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/BabylonNative)

set(SHARED_INCLUDES
    "${CMAKE_CURRENT_LIST_DIR}" PARENT_SCOPE)

set(SHARED_SOURCES
    "${CMAKE_CURRENT_LIST_DIR}/DispatchFunction.h"
    "${CMAKE_CURRENT_LIST_DIR}/BabylonNative.h"
    "${CMAKE_CURRENT_LIST_DIR}/BabylonNative.cpp" PARENT_SCOPE)

if (${BABYLON_NATIVE_PLUGIN_NATIVECAMERA})
    list(APPEND ADDITIONAL_LIBRARIES NativeCamera)
endif()
if (${BABYLON_NATIVE_PLUGIN_NATIVEXR})
    list(APPEND ADDITIONAL_LIBRARIES NativeXr)
endif()

set(ADDITIONAL_LIBRARIES "${ADDITIONAL_LIBRARIES}" PARENT_SCOPE)