set(FETCHCONTENT_FULLY_DISCONNECTED ON)
set(BABYLON_NATIVE_BUILD_APPS OFF)
set(BABYLON_NATIVE_INSTALL OFF)
set(BABYLON_NATIVE_PLUGIN_TESTUTILS OFF)
set(FETCHCONTENT_SOURCE_DIR_BGFX.CMAKE "${CMAKE_SOURCE_DIR}/deps/bgfx.cmake-src")
set(FETCHCONTENT_SOURCE_DIR_ARCANA.CPP "${CMAKE_SOURCE_DIR}/deps/arcana.cpp-src")
set(FETCHCONTENT_SOURCE_DIR_CMAKEEXTENSIONS "${CMAKE_SOURCE_DIR}/deps/cmakeextensions-src")
set(FETCHCONTENT_SOURCE_DIR_JSRUNTIMEHOST "${CMAKE_SOURCE_DIR}/deps/jsruntimehost-src")
set(FETCHCONTENT_SOURCE_DIR_URLLIB "${CMAKE_SOURCE_DIR}/deps/urllib-src")
set(FETCHCONTENT_SOURCE_DIR_SPIRV-CROSS "${CMAKE_SOURCE_DIR}/deps/spirv-cross-src")
set(FETCHCONTENT_SOURCE_DIR_LIBWEBP "${CMAKE_SOURCE_DIR}/deps/libwebp-src")
set(FETCHCONTENT_SOURCE_DIR_GLSLANG "${CMAKE_SOURCE_DIR}/deps/glslang-src")
set(FETCHCONTENT_SOURCE_DIR_BASE-N "${CMAKE_SOURCE_DIR}/deps/base-n-src")
set(FETCHCONTENT_SOURCE_DIR_IOS-CMAKE "${CMAKE_SOURCE_DIR}/deps/ios-cmake-src")
set(FETCHCONTENT_SOURCE_DIR_ARCORE-ANDROID-SDK "${CMAKE_SOURCE_DIR}/deps/arcore-android-sdk-src")
set(FETCHCONTENT_SOURCE_DIR_ANDROIDEXTENSIONS "${CMAKE_SOURCE_DIR}/deps/androidextensions-src")

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Repo)
